# erp-yayasan-platform

./: .gitignore  AGENTS.md  pyproject.toml  test_auth.py  test_partner.py  test_user.py
.codex/: AGENTS.md
alembic/: env.py
alembic/versions/: 41899a7dd384_initial_database.py  80f684f67b9b_initial_database.py  a3ce7a5eb65c_initial_schema.py
app/: main.py
erp/auth/: __init__.py  current_user.py  password.py  permission.py  session.py
erp/config/: settings.py
erp/controllers/: __init__.py  login_controller.py
erp/core/: authorization.py  permission.py
erp/database/: __init__.py  engine.py  init_db.py  run_seeder.py  seed.py  session.py
erp/gui/: main.py
erp/models/: __init__.py  academic_year.py  category.py  fund_position.py  fund_source.py  partner.py  permission.py  proposal.py  proposal_item.py  role.py  role_permission.py  unit.py  user.py
erp/repositories/: __init__.py  academic_year_repository.py  authorization_repository.py  base_repository.py  category_repository.py  fund_position_repository.py  fund_source_repository.py  partner_repository.py  permission_repository.py  proposal_repository.py  role_permission_repository.py  role_repository.py  (+2 more)
erp_yayasan_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: create_database.py
tests/: test_academic_year.py  test_academic_year_dialog.py  test_academic_year_page.py  test_academy_year_seeder.py  test_auth_service.py  test_fund_position_repository.py  test_gui.py  test_login_controller.py  test_proposal_model.py  test_proposal_relationship.py  test_session.py
(+73 files in other folders)
