[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erp-yayasan-platform"
version = "0.1.0"
description = "ERP Yayasan Platform"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0",
    "alembic>=1.16",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "bcrypt>=4.2",
    "PySide6>=6.9",
]

[tool.setuptools]
packages = ["app", "erp"]

[tool.setuptools.package-dir]
"" = "."